--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,23 +45,23 @@
       <router-outlet></router-outlet>
     </div>
   </main>
-  <footer style="vertical-align: auto">
-    <div class="row d-flex align-items-center">
-      <div class="col-md-6 text-center text-md-start">
-        <div class="p-3">
+  <footer style="vertical-align: auto; margin-left: auto; margin-right: auto;">
+    <div class="row">
+      <div class="col-9">
+        <div class="p-2">
           © 2023 Copyright:
           <a href="https://github.com/karol-preiskorn/3d-inventory">ultimasolution.pl</a>
         </div>
       </div>
-      <div class="col-md-5 text-center text-md-end">
+      <div class="col-8 text-center">
         <a class="btn btn-floating m-1 p-1" role="button"
           href="https://github.com/karol-preiskorn/3d-inventory-angular-ui">
           <i class="bi bi-github" style="font-size: 1.2rem; color: rgb(82, 90, 105)"></i>
         </a>
-        <a class="btn btn-floating m-2 p-1" role="button" href="https://www.ultimasolution.pl/3d-inventory/">
+        <a class="btn btn-floating m-1 p-1" role="button" href="https://www.ultimasolution.pl/3d-inventory/">
           <i class="bi bi-wordpress" style="font-size: 1.2em; color: cornflowerblue"></i>
         </a>
-        <a class="btn btn-floating m-2 p-1" role="button" href="https://www.facebook.com/ultimasolution">
+        <a class="btn btn-floating m-1 p-1" role="button" href="https://www.facebook.com/ultimasolution">
           <i class="bi bi-facebook" style="font-size: 1.2em; color: cornflowerblue"></i>
         </a>
       </div>
