After upgrade to 17 not working, add Device Fixes #110

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,1 @@
-<div class="border p-6"><markdown [srcRelativeLink]="true" [data]="md"></markdown></div>
+<div class="border p-6"><markdown [src]="md" [data]="md"></markdown></div>
