--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,3 @@
-<div class="border p-6"><markdown [srcRelativeLink]="true" [data]="md"></markdown></div>
+<div class="border p-6">
+  <markdown [data]="md"></markdown>
+</div>
