--- a/src/app/components/floors/add-floor/add-floor.component.html
+++ b/src/app/components/floors/add-floor/add-floor.component.html
@@ -8,13 +8,7 @@
     <div class="col border">
       <div class="form-group mb-3">
         <label>Name</label>
-        <textarea
-          formControlName="name"
-          rows="2"
-          minlength="4"
-          maxlength="4000"
-          required
-          [ngClass]="{
+        <textarea formControlName="name" rows="2" minlength="4" maxlength="4000" required [ngClass]="{
             'is-invalid': this.floorForm.controls.name.status != 'VALID',
             'is-valid': this.floorForm.controls.name.status == 'VALID',
             'form-control': true
@@ -25,25 +19,21 @@
         </div>
       </div>
 
-      <div formGroupName="adress">
+      <div formGroupName="address">
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
               <label for="street" class="form-label">Street</label>
-              <input
-                type="text"
-                formControlName="street"
-                id="street"
-                required
-                [ngClass]="{
-                  'is-invalid': this.floorForm.controls.adress.controls.street.status != 'VALID',
-                  'is-valid': this.floorForm.controls.adress.controls.street.status == 'VALID',
+              <input type="text" formControlName="street" id="street" required [ngClass]="{
+                  'is-invalid': this.floorForm.controls.address.controls.street.status != 'VALID',
+                  'is-valid': this.floorForm.controls.address.controls.street.status == 'VALID',
                   'form-control': true
                 }" />
-              <div *ngIf="this.floorForm.controls.adress.controls.street.errors" class="invalid-feedback">
-                <div *ngIf="this.floorForm.controls.adress.controls.street.errors.required">street is required</div>
-                <div *ngIf="this.floorForm.controls.adress.controls.street.errors.minlength">
-                  street must be at least 1 characters
+              <div *ngIf="this.floorForm.controls.address.controls.street.errors" class="invalid-feedback">
+                <div *ngIf="this.floorForm.controls.address.controls.street.errors.required">Street is required
+                </div>
+                <div *ngIf="this.floorForm.controls.address.controls.street.errors.minlength">
+                  Street must be at least 1 characters
                 </div>
               </div>
             </div>
@@ -51,19 +41,14 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="city" class="form-label">City</label>
-              <input
-                type="text"
-                formControlName="city"
-                id="city"
-                required
-                [ngClass]="{
-                  'is-invalid': this.floorForm.controls.adress.controls.city.status != 'VALID',
-                  'is-valid': this.floorForm.controls.adress.controls.city.status == 'VALID',
+              <input type="text" formControlName="city" id="city" required [ngClass]="{
+                  'is-invalid': this.floorForm.controls.address.controls.city.status != 'VALID',
+                  'is-valid': this.floorForm.controls.address.controls.city.status == 'VALID',
                   'form-control': true
                 }" />
-              <div *ngIf="this.floorForm.controls.adress.controls.city.errors" class="invalid-feedback">
-                <div *ngIf="this.floorForm.controls.adress.controls.city.errors.required">City is required</div>
-                <div *ngIf="this.floorForm.controls.adress.controls.city.errors.minlength">
+              <div *ngIf="this.floorForm.controls.address.controls.city.errors" class="invalid-feedback">
+                <div *ngIf="this.floorForm.controls.address.controls.city.errors.required">City is required</div>
+                <div *ngIf="this.floorForm.controls.address.controls.city.errors.minlength">
                   City must be at least 1 characters
                 </div>
               </div>
@@ -72,19 +57,15 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="country" class="form-label">Country</label>
-              <input
-                type="text"
-                formControlName="country"
-                id="country"
-                required
-                [ngClass]="{
-                  'is-invalid': this.floorForm.controls.adress.controls.country.status != 'VALID',
-                  'is-valid': this.floorForm.controls.adress.controls.country.status == 'VALID',
+              <input type="text" formControlName="country" id="country" required [ngClass]="{
+                  'is-invalid': this.floorForm.controls.address.controls.country.status != 'VALID',
+                  'is-valid': this.floorForm.controls.address.controls.country.status == 'VALID',
                   'form-control': true
                 }" />
-              <div *ngIf="this.floorForm.controls.adress.controls.country.errors" class="invalid-feedback">
-                <div *ngIf="this.floorForm.controls.adress.controls.country.errors.required">country is required</div>
-                <div *ngIf="this.floorForm.controls.adress.controls.country.errors.minlength">
+              <div *ngIf="this.floorForm.controls.address.controls.country.errors" class="invalid-feedback">
+                <div *ngIf="this.floorForm.controls.address.controls.country.errors.required">country is required
+                </div>
+                <div *ngIf="this.floorForm.controls.address.controls.country.errors.minlength">
                   country must be at least 1 characters
                 </div>
               </div>
@@ -93,19 +74,15 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="postcode" class="form-label">postcode</label>
-              <input
-                type="text"
-                formControlName="postcode"
-                id="postcode"
-                required
-                [ngClass]="{
-                  'is-invalid': this.floorForm.controls.adress.controls.postcode.status != 'VALID',
-                  'is-valid': this.floorForm.controls.adress.controls.postcode.status == 'VALID',
+              <input type="text" formControlName="postcode" id="postcode" required [ngClass]="{
+                  'is-invalid': this.floorForm.controls.address.controls.postcode.status != 'VALID',
+                  'is-valid': this.floorForm.controls.address.controls.postcode.status == 'VALID',
                   'form-control': true
                 }" />
-              <div *ngIf="this.floorForm.controls.adress.controls.postcode.errors" class="invalid-feedback">
-                <div *ngIf="this.floorForm.controls.adress.controls.postcode.errors.required">postcode is required</div>
-                <div *ngIf="this.floorForm.controls.adress.controls.postcode.errors.minlength">
+              <div *ngIf="this.floorForm.controls.address.controls.postcode.errors" class="invalid-feedback">
+                <div *ngIf="this.floorForm.controls.address.controls.postcode.errors.required">postcode is required
+                </div>
+                <div *ngIf="this.floorForm.controls.address.controls.postcode.errors.minlength">
                   postcode must be at least 1 characters
                 </div>
               </div>
@@ -125,19 +102,13 @@
               <div class="col">
                 <div class="form-group mb-3">
                   <label>Description</label>
-                  <textarea
-                    formControlName="description"
-                    rows="2"
-                    minlength="4"
-                    maxlength="4000"
-                    required
+                  <textarea formControlName="description" rows="2" minlength="4" maxlength="4000" required
                     [ngClass]="{
                       'is-invalid': this.floorForm.controls.dimension.at(i).controls.description.status != 'VALID',
                       'is-valid': this.floorForm.controls.dimension.at(i).controls.description.status == 'VALID',
                       'form-control': true
                     }"></textarea>
-                  <div
-                    *ngIf="this.floorForm.controls.dimension.at(i).controls.description.errors"
+                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.description.errors"
                     class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.description.errors?.required">
                       description is required
@@ -152,22 +123,18 @@
             <div class="row">
               <div class="col">
                 <div class="form-group mb-3">
-                  <label for="x_pos" class="form-label">X position</label>
-                  <input
-                    type="text"
-                    formControlName="x_pos"
-                    id="x_pos"
-                    required
-                    [ngClass]="{
-                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.x_pos.status != 'VALID',
-                      'is-valid': this.floorForm.controls.dimension.at(i).controls.x_pos.status == 'VALID',
+                  <label for="xPos" class="form-label">X position</label>
+                  <input type="text" formControlName="xPos" id="xPos" required [ngClass]="{
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.xPos.status != 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.xPos.status == 'VALID',
                       'form-control': true
                     }" />
-                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x_pos.errors" class="invalid-feedback">
-                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x_pos.errors?.required">
+                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.xPos.errors"
+                    class="invalid-feedback">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.xPos.errors?.required">
                       X position is required
                     </div>
-                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x_pos.errors?.minlength">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.xPos.errors?.minlength">
                       X position must be at least 1 characters
                     </div>
                   </div>
@@ -175,22 +142,18 @@
               </div>
               <div class="col">
                 <div class="form-group mb-3">
-                  <label for="y_pos" class="form-label">Y position</label>
-                  <input
-                    type="text"
-                    formControlName="y_pos"
-                    id="y_pos"
-                    required
-                    [ngClass]="{
-                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.y_pos.status != 'VALID',
-                      'is-valid': this.floorForm.controls.dimension.at(i).controls.y_pos.status == 'VALID',
+                  <label for="yPos" class="form-label">Y position</label>
+                  <input type="text" formControlName="yPos" id="yPos" required [ngClass]="{
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.yPos.status != 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.yPos.status == 'VALID',
                       'form-control': true
                     }" />
-                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y_pos.errors" class="invalid-feedback">
-                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y_pos.errors?.required">
+                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.yPos.errors"
+                    class="invalid-feedback">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.yPos.errors?.required">
                       Y is required
                     </div>
-                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y_pos.errors?.minlength">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.yPos.errors?.minlength">
                       Y must be at least 1 characters
                     </div>
                   </div>
@@ -198,22 +161,18 @@
               </div>
               <div class="col">
                 <div class="form-group mb-3">
-                  <label for="h_pos" class="form-label">H position</label>
-                  <input
-                    type="text"
-                    formControlName="h_pos"
-                    id="h_pos"
-                    required
-                    [ngClass]="{
-                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.h_pos.status != 'VALID',
-                      'is-valid': this.floorForm.controls.dimension.at(i).controls.h_pos.status == 'VALID',
+                  <label for="hPos" class="form-label">H position</label>
+                  <input type="text" formControlName="hPos" id="hPos" required [ngClass]="{
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.hPos.status != 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.hPos.status == 'VALID',
                       'form-control': true
                     }" />
-                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h_pos.errors" class="invalid-feedback">
-                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h_pos.errors?.required">
+                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.hPos.errors"
+                    class="invalid-feedback">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.hPos.errors?.required">
                       H is required
                     </div>
-                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h_pos.errors?.minlength">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.hPos.errors?.minlength">
                       H must be at least 1 characters
                     </div>
                   </div>
@@ -224,18 +183,14 @@
               <div class="col">
                 <div class="form-group mb-3">
                   <label for="x" class="form-label">X</label>
-                  <input
-                    type="text"
-                    formControlName="x"
-                    id="x"
-                    required
-                    [ngClass]="{
+                  <input type="text" formControlName="x" id="x" required [ngClass]="{
                       'is-invalid': this.floorForm.controls.dimension.at(i).controls.x.status != 'VALID',
                       'is-valid': this.floorForm.controls.dimension.at(i).controls.x.status == 'VALID',
                       'form-control': true
                     }" />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x.errors" class="invalid-feedback">
-                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x.errors?.required">X is required</div>
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x.errors?.required">X is required
+                    </div>
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x.errors?.minlength">
                       X must be at least 1 characters
                     </div>
@@ -245,18 +200,14 @@
               <div class="col">
                 <div class="form-group mb-3">
                   <label for="y" class="form-label">Y</label>
-                  <input
-                    type="text"
-                    formControlName="y"
-                    id="y"
-                    required
-                    [ngClass]="{
+                  <input type="text" formControlName="y" id="y" required [ngClass]="{
                       'is-invalid': this.floorForm.controls.dimension.at(i).controls.y.status != 'VALID',
                       'is-valid': this.floorForm.controls.dimension.at(i).controls.y.status == 'VALID',
                       'form-control': true
                     }" />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y.errors" class="invalid-feedback">
-                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y.errors?.required">Y is required</div>
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y.errors?.required">Y is required
+                    </div>
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y.errors?.minlength">
                       Y must be at least 1 characters
                     </div>
@@ -266,18 +217,14 @@
               <div class="col">
                 <div class="form-group mb-3">
                   <label for="h" class="form-label">H</label>
-                  <input
-                    type="text"
-                    formControlName="h"
-                    id="h"
-                    required
-                    [ngClass]="{
+                  <input type="text" formControlName="h" id="h" required [ngClass]="{
                       'is-invalid': this.floorForm.controls.dimension.at(i).controls.h.status != 'VALID',
                       'is-valid': this.floorForm.controls.dimension.at(i).controls.h.status == 'VALID',
                       'form-control': true
                     }" />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h.errors" class="invalid-feedback">
-                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h.errors?.required">h is required</div>
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h.errors?.required">h is required
+                    </div>
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h.errors?.minlength">
                       h must be at least 1 characters
                     </div>
@@ -312,7 +259,8 @@
         </p>
         <div class="d-flex p-2">
           <div class="p-1 g-col-1">
-            <button type="submit" [disabled]="!(floorForm.valid && floorForm.touched)" class="btn btn-primary mb-3">
+            <button type="submit" [disabled]="!(floorForm.valid && floorForm.touched)"
+              class="btn btn-primary mb-3">
               <i class="bi bi-save"></i> Save
             </button>
           </div>
