--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,12 +22,35 @@
             class="bi bi-hdd"></i> Devices</a>
         <a class="nav-link" routerLink="/models-list" routerLinkActive="active" ariaCurrentWhenActive="page"><i
             class="bi bi-motherboard"></i> Models</a>
-        <a class="nav-link" routerLink="/attribute-list" routerLinkActive="active" ariaCurrentWhenActive="page"><i
-            class="bi bi-bar-chart"></i> Attributes</a>
-        <a class="nav-link" routerLink="/attribute-dictionary-list" routerLinkActive="active"
-          ariaCurrentWhenActive="page"><i class="bi bi-grid-3x3-gap"></i> Attr. Dictionary</a>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+            aria-expanded="false">Attributes</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="/attribute-list" routerLinkActive="active"
+                ariaCurrentWhenActive="page"><i class="bi bi-bar-chart"></i> Attributes</a></li>
+            <li><a class="dropdown-item" routerLink="/attribute-dictionary-list" routerLinkActive="active"
+                ariaCurrentWhenActive="page"><i class="bi bi-grid-3x3-gap"></i> Attr. Dictionary</a></li>
+          </ul>
+        </li>
         <a class="nav-link" routerLink="/connection-list" routerLinkActive="active" ariaCurrentWhenActive="page"><i
             class="bi bi-ethernet"></i> Connections</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+            aria-expanded="false">Users</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Users</a></li>
+            <li><a class="dropdown-item" href="#">Roles</a></li>
+            <li><a class="dropdown-item" href="#">Permissions</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Login</a></li>
+            <li><a class="dropdown-item" href="#">Logout</a></li>
+            <li><a class="dropdown-item" href="#">Register</a></li>
+          </ul>
+        </li>
+
         <form class="d-flex">
           <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search" />
         </form>
