--- a/src/app/components/attribute-dictionary/add-attribute-dictionary/add-attribute-dictionary.component.html
+++ b/src/app/components/attribute-dictionary/add-attribute-dictionary/add-attribute-dictionary.component.html
@@ -3,35 +3,24 @@
   <form [formGroup]="addAttributeDictionaryForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
     <div class="form-group mb-3">
       <label for="id" class="form-label">Id</label>
-      <input
-        type="text"
-        formControlName="id"
-        id="id"
-        required
-        readonly
-        [ngClass]="{
-          'is-invalid': this.addAttributeDictionaryForm.controls.id.status != 'VALID',
-          'is-valid': this.addAttributeDictionaryForm.controls.id.status == 'VALID',
+      <input type="text" formControlName="id" id="id" required readonly [ngClass]="{
+          'is-invalid': this.addAttributeDictionaryForm.controls._id.status != 'VALID',
+          'is-valid': this.addAttributeDictionaryForm.controls._id.status == 'VALID',
           'form-control': true
         }" />
-      <div *ngIf="this.addAttributeDictionaryForm.controls.id.errors" class="invalid-feedback">
-        <div *ngIf="this.addAttributeDictionaryForm.controls.id.errors.required">Id is required</div>
-        <div *ngIf="this.addAttributeDictionaryForm.controls.id.errors.minlength">Id must be at least 4 characters</div>
+      <div *ngIf="this.addAttributeDictionaryForm.controls._id.errors" class="invalid-feedback">
+        <div *ngIf="this.addAttributeDictionaryForm.controls._id.errors.required">Id is required</div>
+        <div *ngIf="this.addAttributeDictionaryForm.controls._id.errors.minlength">Id must be at least 4 characters
+        </div>
       </div>
     </div>
     <div class="form-group mb-3">
       <label for="name" class="form-label">Name</label>
-      <textarea
-        [ngClass]="{
+      <textarea [ngClass]="{
           'is-invalid': this.addAttributeDictionaryForm.controls.name.status != 'VALID',
           'is-valid': this.addAttributeDictionaryForm.controls.name.status == 'VALID',
           'form-control': true
-        }"
-        formControlName="name"
-        id="name"
-        required
-        >{{ this.addAttributeDictionaryForm.value.name }}</textarea
-      >
+        }" formControlName="name" id="name" required>{{ this.addAttributeDictionaryForm.value.name }}</textarea>
       <div *ngIf="this.addAttributeDictionaryForm.controls.name.errors" class="invalid-feedback">
         <div *ngIf="this.addAttributeDictionaryForm.controls.name.errors.required">Attribute name is required</div>
         <div *ngIf="this.addAttributeDictionaryForm.controls.name.errors.minlength">
@@ -43,15 +32,11 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="type" class="form-label">Type</label>
-          <select
-            (change)="changeType($event)"
-            formControlName="type"
-            [ngClass]="{
+          <select (change)="changeType($event)" formControlName="type" [ngClass]="{
               'is-invalid': this.addAttributeDictionaryForm.controls.type.status != 'VALID',
               'is-valid': this.addAttributeDictionaryForm.controls.type.status == 'VALID',
               'form-select': true
-            }"
-            id="type">
+            }" id="type">
             <option *ngFor="let typeObj of deviceTypeDict.list; let i = index">
               {{ typeObj.name }}
             </option>
@@ -67,11 +52,7 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="category" class="form-label">Category</label>
-          <select
-            (change)="changeCategory($event)"
-            formControlName="category"
-            id="category"
-            [ngClass]="{
+          <select (change)="changeCategory($event)" formControlName="category" id="category" [ngClass]="{
               'is-invalid': this.addAttributeDictionaryForm.controls.category.status != 'VALID',
               'is-valid': this.addAttributeDictionaryForm.controls.category.status == 'VALID',
               'form-select': true
@@ -81,41 +62,37 @@
             </option>
           </select>
           <div *ngIf="this.addAttributeDictionaryForm.controls.category.errors" class="invalid-feedback">
-            <div *ngIf="this.addAttributeDictionaryForm.controls.category.errors.required">Category is required</div>
+            <div *ngIf="this.addAttributeDictionaryForm.controls.category.errors.required">Category is required
+            </div>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="form-group mb-3">
           <label for="component" class="form-label">Component</label>
-          <select
-            (change)="changeCategory($event)"
-            formControlName="component"
-            [ngClass]="{
+          <select (change)="changeComponent($event)" formControlName="component" [ngClass]="{
               'is-invalid': this.addAttributeDictionaryForm.controls.component.status != 'VALID',
               'is-valid': this.addAttributeDictionaryForm.controls.component.status == 'VALID',
               'form-select': true
-            }"
-            id="component">
+            }" id="component">
             <option *ngFor="let componentObj of componentDictionary.list; let i = index">
               {{ componentObj.name }}
             </option>
           </select>
           <div *ngIf="this.addAttributeDictionaryForm.controls.component.errors" class="invalid-feedback">
-            <div *ngIf="this.addAttributeDictionaryForm.controls.component.errors.required">Component is required</div>
+            <div *ngIf="this.addAttributeDictionaryForm.controls.component.errors.required">Component is required
+            </div>
           </div>
         </div>
       </div>
     </div>
     <div class="form-group mb-3">
-      <button
-        type="submit"
+      <button type="submit"
         [disabled]="!(this.addAttributeDictionaryForm.valid && this.addAttributeDictionaryForm.touched)"
         class="btn btn-primary">
         Add model
       </button>
-      <div
-        *ngIf="!(this.addAttributeDictionaryForm.valid && this.addAttributeDictionaryForm.touched)"
+      <div *ngIf="!(this.addAttributeDictionaryForm.valid && this.addAttributeDictionaryForm.touched)"
         class="invalid-feedback">
         Form is invalid
       </div>
