--- a/src/app/components/devices/devices-list/devices-list.component.html
+++ b/src/app/components/devices/devices-list/devices-list.component.html
@@ -9,8 +9,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr
-        *ngFor="
+      <tr *ngFor="
           let device of deviceList
             | paginate
               : {
@@ -23,20 +22,22 @@
         <td>[x: {{ device.position.x }}, y: {{ device.position.y }}, h: {{ device.position.h }}]</td>
         <td>
           <a href="edit-model/{{ device.modelId }}" tooltip="{{ device.modelId }}"><i
-            class="bi bi-motherboard"></i> {{
+              class="bi bi-motherboard"></i> {{
             this.findModelName(device.modelId)
-          }}</a>
+            }}</a>
         </td>
         <td>
           <div class="btn-group  float-md-end" role="group" aria-label="device-operations">
-            <button type="button" class="btn btn-success btn-sm move-right" id="edit-device" (click)="EditForm(device)">
-              Edit
+            <button type="button" class="btn btn-success btn-sm move-right" id="edit-device"
+              (click)="EditForm(device)">
+              <i class="bi bi-pen"></i>
             </button>
-            <button type="button" id="delete-device" class="btn btn-danger btn-sm" (click)="DeleteDevice(device.id)">
-              Delete
+            <button type="button" id="delete-device" class="btn btn-danger btn-sm"
+              (click)="DeleteDevice(device.id)">
+              <i class="bi bi-trash"></i>
             </button>
-            <button type="button" id="clone-device" class="btn btn-info btn-sm" (click)="CloneDevice(device.id)">
-              Clone
+            <button type="button" id="clone-device" class="btn btn-light btn-sm" (click)="CloneDevice(device.id)">
+              <i class="bi bi-copy"></i>
             </button>
           </div>
         </td>
