--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -6,13 +6,13 @@
         <label for="id" class="form-label">Id</label>
         <input type="text" class="form-control" placeholder="Id" aria-label="id" formControlName="id"
           formControlName="id" id="id" readonly [ngClass]="{
-              'is-invalid': this.editDeviceForm.controls.id.status != 'VALID',
-              'is-valid': this.editDeviceForm.controls.id.status == 'VALID',
+              'is-invalid': this.editDeviceForm.controls._id.status != 'VALID',
+              'is-valid': this.editDeviceForm.controls._id.status == 'VALID',
               'form-control': true
             }" />
-        <div *ngIf="this.editDeviceForm.controls.id.errors" class="invalid-feedback">
-          <div *ngIf="this.editDeviceForm.controls.id.errors.required">Id is required</div>
-          <div *ngIf="this.editDeviceForm.controls.id.errors.minlength">Id must be at least 4 characters</div>
+        <div *ngIf="this.editDeviceForm.controls._id.errors" class="invalid-feedback">
+          <div *ngIf="this.editDeviceForm.controls._id.errors.required">Id is required</div>
+          <div *ngIf="this.editDeviceForm.controls._id.errors.minlength">Id must be at least 4 characters</div>
         </div>
       </div>
       <div class="col">
