--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,7 +72,7 @@
     <div class="row">
       <div class="col-9">
         <div class="p-2">
-          © 2023 Copyright:
+          © 2022-{{currentYearLong()}} Copyright:
           <a href="https://github.com/karol-preiskorn/3d-inventory">ultimasolution.pl</a>
         </div>
       </div>
