--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -16,7 +16,7 @@
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
                   'form-select': true
                 }" id="deviceId">
-                <option *ngFor="let deviceObj of deviceDictionary; let i = index" value="{{ deviceObj.id }}">
+                <option *ngFor="let deviceObj of deviceDictionary; let i = index" value="{{ deviceObj._id }}">
                   {{ deviceObj.name }}
                 </option>
               </select>
@@ -36,7 +36,7 @@
                 'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
                 'form-select': true
               }" id="modelId">
-                <option *ngFor="let modelObj of modelDictionary; let i = index" value="{{ modelObj.id }}">
+                <option *ngFor="let modelObj of modelDictionary; let i = index" value="{{ modelObj._id }}">
                   {{ modelObj.name }}
                 </option>
               </select>
@@ -57,7 +57,7 @@
                 'form-select': true
               }" id="connectionId">
                 <option *ngFor="let connectionObj of connectionDictionary; let i = index"
-                  value="{{ connectionObj.id }}">
+                  value="{{ connectionObj._id }}">
                   {{ connectionObj.name }}
                 </option>
               </select>
@@ -75,14 +75,13 @@
         <div class="form-group mb-2">
           <label for="attributeDictionaryId" class="form-label">Attribute Dictionary Id</label>
           <select (change)="changeAttributeDictionaryId($event)" formControlName="attributeDictionaryId"
-          formControlName="attributeDictionaryId"
-          [ngClass]="{
+            formControlName="attributeDictionaryId" [ngClass]="{
             'is-invalid': this.addAttributeFrom.controls.attributeDictionaryId.status != 'VALID',
             'is-valid': this.addAttributeFrom.controls.attributeDictionaryId.status == 'VALID',
             'form-select': true
           }" id="attributeDictionaryId">
             <option *ngFor="let attributeDictionaryObj of attributeDictionary; let i = index"
-              value="{{ attributeDictionaryObj.id }}">
+              value="{{ attributeDictionaryObj._id }}">
               {{ attributeDictionaryObj.name }}
             </option>
           </select>
@@ -124,9 +123,9 @@
             Add attribute
           </button>
 
-            <button type="button" (click)="generateAttributeDictionary()" class="btn btn-debug">
-              <i class="bi bi-bookmark-plus"></i> Generate random data
-            </button>
+          <button type="button" (click)="generateAttributeDictionary()" class="btn btn-debug">
+            <i class="bi bi-bookmark-plus"></i> Generate random data
+          </button>
 
           <div *ngIf="!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)">Form is invalid</div>
           <span class="text-danger" *ngIf="addAttributeFrom.hasError('atLeastOneValidator')">
