--- a/src/app/components/connection/connection-list/connection-list.component.html
+++ b/src/app/components/connection/connection-list/connection-list.component.html
@@ -18,7 +18,7 @@
                         currentPage: connectionListPage
                       }
               ">
-        <td tooltip="{{ connectionObj.id }}">{{ connectionObj.name }}</td>
+        <td tooltip="{{ connectionObj._id }}">{{ connectionObj.name }}</td>
         <td>
           <a href="/edit-device/{{ connectionObj.deviceIdFrom }}">
             <i class="bi bi-box"></i> {{ this.findDevice(connectionObj.deviceIdFrom).name }}
@@ -39,11 +39,11 @@
               Edit
             </button>
             <button type="button" id="delete-connection" class="btn btn-danger btn-sm"
-              (click)="deleteConnection(connectionObj.id)">
+              (click)="deleteConnection(connectionObj._id)">
               Delete
             </button>
             <button type="button" id="clone-connection" class="btn btn-info btn-sm"
-              (click)="CloneConnection(connectionObj.id)">
+              (click)="CloneConnection(connectionObj._id)">
               Clone
             </button>
           </div>
