--- a/src/app/components/connection/edit-connection/edit-connection.component.html
+++ b/src/app/components/connection/edit-connection/edit-connection.component.html
@@ -6,16 +6,11 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="name" class="form-label">Name</label>
-          <input
-            formControlName="name"
-            id="name"
-            class="form-control"
-            [ngClass]="{
+          <input formControlName="name" id="name" class="form-control" [ngClass]="{
               'is-invalid': this.editConnectionForm.controls.name.status != 'VALID',
               'is-valid': this.editConnectionForm.controls.name.status == 'VALID',
               'form-control': true
-            }"
-            value="{{ this.editConnectionForm.value.name }}" />
+            }" value="{{ this.editConnectionForm.value.name }}" />
           <div class="valid-feedback">Looks good!</div>
           <div class="invalid-feedback">Please choose a name 6 char len.</div>
 
@@ -25,8 +20,7 @@
               Name must be at least 6 characters long.
             </div>
           </div>
-          <div
-            *ngIf="
+          <div *ngIf="
               (editConnectionForm.get('name')?.dirty || editConnectionForm.get('name')?.touched) &&
               editConnectionForm.get('name')?.invalid
             ">
@@ -39,19 +33,13 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="deviceIdFrom" class="form-label">Device From</label>
-          <select
-            (change)="changeDeviceFrom($event)"
-            formControlName="deviceIdFrom"
-            [ngClass]="{
+          <select (change)="changeDeviceFrom($event)" formControlName="deviceIdFrom" [ngClass]="{
               'is-invalid': this.editConnectionForm.controls.deviceIdFrom.status != 'VALID',
               'is-valid': this.editConnectionForm.controls.deviceIdFrom.status == 'VALID',
               'form-select': true
-            }"
-            id="deviceIdFrom">
-            <option
-              *ngFor="let deviceFromObj of deviceList; let i = index"
-              [value]="deviceFromObj.id"
-              [selected]="deviceFromObj.id === this.connection.deviceIdFrom">
+            }" id="deviceIdFrom">
+            <option *ngFor="let deviceFromObj of deviceList; let i = index" [value]="deviceFromObj._id"
+              [selected]="deviceFromObj._id === this.connection.deviceIdFrom">
               {{ deviceFromObj.name }}
             </option>
           </select>
@@ -68,19 +56,13 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="deviceIdTo" class="form-label">Device To</label>
-          <select
-            (change)="changeDeviceTo($event)"
-            formControlName="deviceIdTo"
-            [ngClass]="{
+          <select (change)="changeDeviceTo($event)" formControlName="deviceIdTo" [ngClass]="{
               'is-invalid': this.editConnectionForm.controls.deviceIdTo.status != 'VALID',
               'is-valid': this.editConnectionForm.controls.deviceIdTo.status == 'VALID',
               'form-select': true
-            }"
-            id="deviceIdTo">
-            <option
-              *ngFor="let deviceToObj of deviceList; let i = index"
-              [value]="deviceToObj.id"
-              [selected]="deviceToObj.id === this.connection.deviceIdTo">
+            }" id="deviceIdTo">
+            <option *ngFor="let deviceToObj of deviceList; let i = index" [value]="deviceToObj._id"
+              [selected]="deviceToObj._id === this.connection.deviceIdTo">
               {{ deviceToObj.name }}
             </option>
           </select>
@@ -96,9 +78,7 @@
       </div>
     </div>
     <div class="form-group mb-3">
-      <button
-        type="submit"
-        [disabled]="!(this.editConnectionForm.valid && this.editConnectionForm.touched)"
+      <button type="submit" [disabled]="!(this.editConnectionForm.valid && this.editConnectionForm.touched)"
         class="btn btn-primary">
         <i class="bi bi-pencil-square"></i> Update
       </button>
