--- a/src/app/components/devices/devices-list/devices-list.component.html
+++ b/src/app/components/devices/devices-list/devices-list.component.html
@@ -18,7 +18,7 @@
                   currentPage: deviceListPage
                 }
         ">
-        <td tooltip="{{ device.id }}">{{ device.name }}</td>
+        <td tooltip="{{ device._id }}">{{ device.name }}</td>
         <td>[x: {{ device.position.x }}, y: {{ device.position.y }}, h: {{ device.position.h }}]</td>
         <td>
           <a href="edit-model/{{ device.modelId }}" tooltip="{{ device.modelId }}"><i
@@ -33,10 +33,10 @@
               <i class="bi bi-pen"></i>
             </button>
             <button type="button" id="delete-device" class="btn btn-danger btn-sm"
-              (click)="DeleteDevice(device.id)">
+              (click)="DeleteDevice(device._id)">
               <i class="bi bi-trash"></i>
             </button>
-            <button type="button" id="clone-device" class="btn btn-light btn-sm" (click)="CloneDevice(device.id)">
+            <button type="button" id="clone-device" class="btn btn-light btn-sm" (click)="CloneDevice(device._id)">
               <i class="bi bi-copy"></i>
             </button>
           </div>
