--- a/src/app/components/models/models-list/models-list.component.html
+++ b/src/app/components/models/models-list/models-list.component.html
@@ -20,7 +20,7 @@
                         currentPage: modelListPage
                       }
               ">
-          <td tooltip="{{ model.id }}">{{ model.name }}</td>
+          <td tooltip="{{ model._id }}">{{ model.name }}</td>
           <td> ({{ model.dimension.width +
             ', ' +
             model.dimension.height +
@@ -39,8 +39,8 @@
               <button type="button" class="btn btn-success btn-sm move-right" id="edit-device"
                 (click)="EditModel(model)"> Edit </button>
               <button type="button" id="delete-device" class="btn btn-danger btn-sm"
-                (click)="DeleteModel(model.id)"> Delete </button>
-              <button type="button" id="clone-device" class="btn btn-info btn-sm" (click)="CloneModel(model.id)">
+                (click)="DeleteModel(model._id)"> Delete </button>
+              <button type="button" id="clone-device" class="btn btn-info btn-sm" (click)="CloneModel(model._id)">
                 Clone </button>
             </div>
           </td>
