Update Angular dependencies and versions in package.json
Bumped Angular dependencies and versions for consistency and compatibility with other packages. This change ensures smoother integration and enhanced performance.

Issue: #123

--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -91,7 +91,7 @@
             </div>
           </div>
           <div class="log-message">
-            {{ this.toString(this.addAttributeFrom.controls.attributeDictionaryId.value) }}
+            {{ this.toString(this.addAttributeFrom.controls.attributeDictionaryId) }}
           </div>
         </div>
       </div>
