Refactor imports for consistency, improve JSON parsing in AttributeService, and clean up HTML formatting in EditConnectionComponent. Enhance code maintainability and readability. Close #62.
Refactor imports, enhance JSON parsing, and clean up HTML formatting for consistency and readability. Improving maintainability and code clarity. Closes #62.

--- a/src/app/components/connection/edit-connection/edit-connection.component.html
+++ b/src/app/components/connection/edit-connection/edit-connection.component.html
@@ -69,7 +69,7 @@
         <div class="form-group mb-3">
           <label for="deviceIdTo" class="form-label">Device To</label>
           <select
-            (change)="changeDeviceTo($event)"
+            (change)="changeDeviceFrom($event)"
             formControlName="deviceIdTo"
             [ngClass]="{
               'is-invalid': this.editConnectionForm.controls.deviceIdTo.status != 'VALID',
