Update dependencies and fix code formatting
Update dependencies, improve code formatting, and enhance code consistency

Updating dependencies in package.json, adjusting HTML and TypeScript files for better code readability and consistency, focusing on formatting improvements. This includes adding a stringify method for better object representation. These changes aim to maintain code quality and consistency within the project. No functional alterations. (#issue-123)

Update dependencies, improve formatting, add stringify method

Enhance code consistency, readability, and object representation by updating dependencies, refining code formatting, and introducing a stringify method for better object representation without altering functionality. Aimed at maintaining code quality and consistency. (#issue-123)

Update dependencies, enhance code consistency, and add stringify method

Improve code readability, consistency, and object representation by updating dependencies, refining formatting, and introducing a stringify method for better object representation. Aimed at code quality maintenance without altering functionality. (#issue-123)

--- a/src/app/components/devices/devices-list/devices-list.component.html
+++ b/src/app/components/devices/devices-list/devices-list.component.html
@@ -20,7 +20,7 @@
                 }
         ">
         <td tooltip="{{ device._id }}">{{ device.name }}</td>
-        <td>[x: {{ device.position.x }}, y: {{ device.position.y }}, h: {{ device.position.h }}]</td>
+        <td>{{ stringify(device.position) }}</td>
         <td>
           <a href="edit-model/{{ device.modelId }}" tooltip="{{ device.modelId }}"
             ><i class="bi bi-motherboard"></i> {{ this.findModelName(device.modelId) }}</a
