Refactor pre-commit script, update project description, and improve data presentation
Adjusted pre-commit script for linting and version update. Enhanced a project description to clarify its purpose. Improved data presentation in connection list and form components for easier readability and user interaction.

Refactor pre-commit script, update project description and enhance data presentation

Adjust pre-commit script for linting and version update, clarify project purpose, and improve data display for better user experience. These changes aim to streamline the development process and enhance project understanding and usability.

--- a/src/app/components/connection/connection-list/connection-list.component.html
+++ b/src/app/components/connection/connection-list/connection-list.component.html
@@ -19,7 +19,10 @@
                   currentPage: connectionListPage
                 }
         ">
-        <td tooltip="{{ connectionObj._id }}">{{ connectionObj.name }}</td>
+        <td>
+          {{ connectionObj.name }}
+          <div class="deviceid">{{ connectionObj._id }}</div>
+        </td>
         <td>
           <a href="/edit-device/{{ connectionObj.deviceIdFrom }}">
             <i class="bi bi-box"></i> {{ this.findDevice(connectionObj.deviceIdFrom).name }}
@@ -39,22 +42,22 @@
               type="button"
               class="btn btn-success btn-sm move-right"
               id="edit-connection"
-              (click)="EditForm(connectionObj)">
-              Edit
+              (click)="editConnection(connectionObj)">
+              <i class="bi bi-pen"></i>
             </button>
             <button
               type="button"
               id="delete-connection"
               class="btn btn-danger btn-sm"
               (click)="deleteConnection(connectionObj._id)">
-              Delete
+              <i class="bi bi-trash"></i>
             </button>
             <button
               type="button"
               id="clone-connection"
               class="btn btn-info btn-sm"
-              (click)="CloneConnection(connectionObj._id)">
-              Clone
+              (click)="cloneConnection(connectionObj._id)">
+              <i class="bi bi-copy"></i>
             </button>
           </div>
         </td>
