--- a/src/app/components/connection/edit-connection/edit-connection.component.html
+++ b/src/app/components/connection/edit-connection/edit-connection.component.html
@@ -1,35 +1,30 @@
 <div class="container-fluid">
   <h2><i class="bi bi-ethernet"></i> Edit Connection</h2>
-  {{ this.toString(this.editConnectionForm.controls.id.value) }}
-  <form [formGroup]="editConnectionForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
+  {{ this.toString(this.form.controls.id.value) }}
+  <form [formGroup]="form" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
     <div class="row">
       <div class="col">
         <div class="form-group mb-3">
           <label for="name" class="form-label">Name</label>
           <input
             formControlName="name"
+            (change)="changeName($event)"
             id="name"
             class="form-control"
             [ngClass]="{
-              'is-invalid': this.editConnectionForm.controls.name.status != 'VALID',
-              'is-valid': this.editConnectionForm.controls.name.status == 'VALID',
+              'is-invalid': this.form.controls.name.status != 'VALID',
+              'is-valid': this.form.controls.name.status == 'VALID',
               'form-control': true
             }"
-            value="{{ this.editConnectionForm.value.name }}" />
+            value="{{ this.form.value.name }}" />
           <div class="valid-feedback">Looks good!</div>
           <div class="invalid-feedback">Please choose a name 6 char len.</div>
 
-          <div *ngIf="editConnectionForm.get('name')?.invalid">
-            <div *ngIf="editConnectionForm.get('name')?.errors?.['required']">Name is required.</div>
-            <div *ngIf="editConnectionForm.get('name')?.errors?.['minlength']">
-              Name must be at least 6 characters long.
-            </div>
+          <div *ngIf="form.get('name')?.invalid">
+            <div *ngIf="form.get('name')?.errors?.['required']">Name is required.</div>
+            <div *ngIf="form.get('name')?.errors?.['minlength']">Name must be at least 6 characters long.</div>
           </div>
-          <div
-            *ngIf="
-              (editConnectionForm.get('name')?.dirty || editConnectionForm.get('name')?.touched) &&
-              editConnectionForm.get('name')?.invalid
-            ">
+          <div *ngIf="(form.get('name')?.dirty || form.get('name')?.touched) && form.get('name')?.invalid">
             Please provide connection name.
           </div>
         </div>
@@ -43,11 +38,12 @@
             (change)="changeDeviceFrom($event)"
             formControlName="deviceIdFrom"
             [ngClass]="{
-              'is-invalid': this.editConnectionForm.controls.deviceIdFrom.status != 'VALID',
-              'is-valid': this.editConnectionForm.controls.deviceIdFrom.status == 'VALID',
+              'is-invalid': this.form.controls.deviceIdFrom.status != 'VALID',
+              'is-valid': this.form.controls.deviceIdFrom.status == 'VALID',
               'form-select': true
             }"
-            id="deviceIdFrom">
+            id="deviceIdFrom"
+            ng-class="this.form.controls.deviceIdFrom.status ? 'error' : ''">
             <option
               *ngFor="let deviceFromObj of deviceList; let i = index"
               [value]="deviceFromObj._id"
@@ -55,13 +51,11 @@
               {{ deviceFromObj.name }}
             </option>
           </select>
-          <div *ngIf="this.editConnectionForm.controls.deviceIdFrom.errors" class="invalid-feedback">
-            <div *ngIf="this.editConnectionForm.controls.deviceIdFrom.errors.required">
-              attributeDictionaryId is required
-            </div>
+          <div *ngIf="this.form.controls.deviceIdFrom.errors" class="invalid-feedback">
+            <div *ngIf="this.form.controls.deviceIdFrom.errors.required">attributeDictionaryId is required</div>
           </div>
           <div class="log-message">
-            {{ this.toString(this.editConnectionForm.controls.deviceIdFrom.value) }}
+            {{ this.toString(this.form.controls.deviceIdFrom.value) }}
           </div>
         </div>
       </div>
@@ -72,8 +66,8 @@
             (change)="changeDeviceFrom($event)"
             formControlName="deviceIdTo"
             [ngClass]="{
-              'is-invalid': this.editConnectionForm.controls.deviceIdTo.status != 'VALID',
-              'is-valid': this.editConnectionForm.controls.deviceIdTo.status == 'VALID',
+              'is-invalid': this.form.controls.deviceIdTo.status != 'VALID',
+              'is-valid': this.form.controls.deviceIdTo.status == 'VALID',
               'form-select': true
             }"
             id="deviceIdTo">
@@ -84,13 +78,11 @@
               {{ deviceToObj.name }}
             </option>
           </select>
-          <div *ngIf="this.editConnectionForm.controls.deviceIdTo.errors" class="invalid-feedback">
-            <div *ngIf="this.editConnectionForm.controls.deviceIdTo.errors.required">
-              attributeDictionaryId is required
-            </div>
+          <div *ngIf="this.form.controls.deviceIdTo.errors" class="invalid-feedback">
+            <div *ngIf="this.form.controls.deviceIdTo.errors.required">attributeDictionaryId is required</div>
           </div>
           <div class="log-message">
-            {{ this.toString(this.editConnectionForm.controls.deviceIdTo.value) }}
+            {{ this.toString(this.form.controls.deviceIdTo.value) }}
           </div>
         </div>
       </div>
@@ -98,13 +90,17 @@
     <div class="form-group mb-3">
       <button
         type="submit"
-        [disabled]="!(this.editConnectionForm.valid && this.editConnectionForm.touched)"
-        class="btn btn-primary">
+        [disabled]="!this.form.valid"
+        class="btn btn-primary"
+        [ngClass]="{
+          'is-invalid': !form.valid,
+          'is-valid': form.valid,
+          'form-control': true
+        }">
         <i class="bi bi-pencil-square"></i> Update
       </button>
-      <div *ngIf="!(this.editConnectionForm.valid && this.editConnectionForm.touched)" class="invalid-feedback">
-        Form is invalid
-      </div>
+      <div *ngIf="!this.form.valid" class="invalid-feedback">Form is invalid</div>
+      <div *ngIf="this.form.valid" class="valid-feedback">Form is valid</div>
     </div>
   </form>
 </div>
