Refactor form initialization and control changes for better data handling efficiency
Improved initialization of form controls to enhance data validation and manipulation. Ensured accuracy in capturing user input fields. These changes aim to optimize data management and user experience. No related issues.

Refactor form initialization for enhanced data handling efficiency

Improved form controls initialization for precise data handling and user input accuracy. These changes optimize data management and user experience. No related issues.

--- a/src/app/components/models/edit-model/edit-model.component.html
+++ b/src/app/components/models/edit-model/edit-model.component.html
@@ -35,6 +35,13 @@
                   'is-valid': this.editModelForm.controls.name.status == 'VALID',
                   'form-control': true
                 }"
+                (change)="changeName($event)"
+                formControlName="type"
+                [ngClass]="{
+                  'is-invalid': this.editModelForm.controls.type.status != 'VALID',
+                  'is-valid': this.editModelForm.controls.type.status == 'VALID',
+                  'form-select': true
+                }"
                 formControlName="name"
                 minlength="4"
                 id="name"
@@ -57,6 +64,7 @@
                 maxlength="6"
                 minlength="1"
                 required
+                (change)="changeWidth($event)"
                 [ngClass]="{
                   'is-invalid': this.editModelForm.controls.dimension.controls.width.status != 'VALID',
                   'is-valid': this.editModelForm.controls.dimension.controls.width.status == 'VALID',
