--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,3 +45,8 @@
   --main-content-background-color: #231f20;
   --main-content-text-color: #ffffff;
 }
+
+.deviceid {
+  color: #9a9aa7;
+  font-size: small;
+}
