--- a/src/app/components/models/models-list/models-list.component.html
+++ b/src/app/components/models/models-list/models-list.component.html
@@ -25,7 +25,7 @@
           ">
           <td>
             {{ model.name }}
-            <p class="fs-7 fw-lighter">{{ model._id }}</p>
+            <p class="fs-7 fw-lighter deviceid">{{ model._id }}</p>
           </td>
           <td>({{ model.dimension.width + ', ' + model.dimension.height + ', ' + model.dimension.depth }})</td>
           <td style="font-size: small">
@@ -42,13 +42,13 @@
                 class="btn btn-success btn-sm move-right"
                 id="edit-device"
                 (click)="EditModel(model)">
-                Edit
+                <i class="bi bi-pen"></i>
               </button>
               <button type="button" id="delete-device" class="btn btn-danger btn-sm" (click)="DeleteModel(model._id)">
-                Delete
+                <i class="bi bi-trash"></i>
               </button>
               <button type="button" id="clone-device" class="btn btn-info btn-sm" (click)="CloneModel(model._id)">
-                Clone
+                <i class="bi bi-copy"></i>
               </button>
             </div>
           </td>
